# tumor_board

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: care_domains.py  case_schema.py  config.py  goc.py  main.py  orchestrator.py  schema.py  treatment_kinds.py
backend/app/ingest/: fhir_adapter.py
backend/app/panel/: __init__.py  api.py  context.py  gates.py  llm.py  orchestrator.py  reconcile.py  roster.py  router.py  run.py  schema.py  specialists.py  synth.py
backend/app/stage2/: __init__.py  adapter.py  bundle.py  enums.py  extract.py  loader.py  transcript.py
backend/app/tools/: guidelines.py  trials.py
backend/tests/: test_cases_api.py  test_goc.py  test_operability_gate.py  test_panel.py  test_stage2_transcript.py
data/data_set/cases/: README.md
data/data_set/cases/hero_breast_escalation/: case_meta.json  tumor_board_transcript.md
data/data_set/cases/variant_1_no_rationale/: case_meta.json  tumor_board_transcript.md
data/data_set/cases/variant_2_stale_interaction/: case_meta.json  tumor_board_transcript.md
data/data_set/cases/variant_3_brca_pending/: case_meta.json  tumor_board_transcript.md
docs/: architecture-delta.md  panel-architecture.md  stage-interface-contract.yaml
fixtures/contract/v1/: patient_case_bundle.json  transcript_bundle.json
frontend/: .env.example
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: FindingCard.tsx  FindingsPanel.tsx  PanelDeliberation.tsx
(+45 files in other folders)
