[project]
name = "tumor-board-backend"
version = "0.1.0"
description = "Tumor Board Gap-Detection Assistant — agentic multi-specialist panel + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
